# MLenvironment

./: .gitignore  =3.0  AGENTS.md  CLAUDE.md  Dockerfile  README.md  VISUALIZATION_GUIDE.md  pyproject.toml  requirements-lock.txt
.agents/skills/repo-check/: SKILL.md
.claude/: launch.json  settings.json
.claude/skills/eval-policy/: SKILL.md
.claude/skills/render-policy/: SKILL.md
.github/workflows/: ci.yml
docs/: exhaustive_repo_review_2026-04-22.md  fixes_2026-04-22.md  learning_quality_studies.md  open_items_todo.md  organism_arena_config.md  organism_env_review_2026-06-09.md  training_presets.md  ui_roadmap.md
docs/plans/: 2026-05-28-organism-arena-buildout.md
reviews/: code_review_2026-05-09_to_2026-05-13.md
rl_framework/: __init__.py
scripts/: benchmark_device_matrix.py  check_repo_policy.py
src/rl_experiment_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rl_framework/: __init__.py  benchmark_device_matrix.py
src/rl_framework/cli/: main.py
src/rl_framework/envs/: __init__.py  base.py  registry.py
src/rl_framework/evolution/: simple_search.py
src/rl_framework/gui/: app.py  (+1 more)
tests/: test_arena_eval.py  test_arena_tournament.py  test_arena_vec_adapter.py  test_benchmark_device_matrix.py  test_checkpoint_utils.py  test_cli_json_output.py  test_config_validation.py  test_curriculum_annealing.py  test_env_api.py  test_eval_runner.py  test_experiment_paths.py  test_frame_capture_callback.py  test_gui_api.py  test_integration.py  test_live_tuning_callback.py  test_logging_utils.py  test_morphology_search.py  test_multi_seed_runner.py  test_quality_study.py  test_repo_policy.py  test_reproducibility.py  test_reproducibility_metadata.py  test_resume.py  test_resume_provenance.py  test_run_registry.py  test_self_play_wrapper.py  test_sweep_runner.py  test_training_manager_streaming.py  test_training_safety_checks.py  test_walker_rewards.py
(+48 files in other folders)
