[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-experiment-framework"
version = "0.1.0"
description = "Modular RL experiment framework for locomotion and organism competitions"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29",
  "pettingzoo>=1.24",
  "supersuit>=3.9",
  "stable-baselines3>=2.3",
  "pybullet>=3.2",
  "hydra-core>=1.3",
  "numpy>=1.26",
  "pandas>=2.1",
  "tensorboard>=2.15",
  "PyYAML>=6.0",
  "flask>=3.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
