[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-experiment-framework"
version = "0.1.0"
description = "Modular RL experiment framework for locomotion and organism competitions"
requires-python = ">=3.10"
dependencies = [
  "gymnasium==1.2.3",
  "pettingzoo==1.25.0",
  "supersuit==3.10.0",
  "stable-baselines3==2.8.0",
  "pybullet==3.2.7",
  "omegaconf==2.3.0",
  "numpy==2.2.6",
  "tensorboard==2.20.0",
  "PyYAML==6.0.3",
  "flask==3.1.3"
]

[project.optional-dependencies]
dev = ["pytest==9.0.3", "pytest-cov==7.1.0", "ruff==0.14.11"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so tests can `from scripts import ...`.
# Bare `pytest` (as CI runs it) does not add the cwd to sys.path the way
# `python -m pytest` does, so without this the scripts/ package is unimportable
# and collection of tests/test_benchmark_device_matrix.py fails.
pythonpath = ["."]
